Remove plugin version to avoid override from parent
   Which has skipped jacoco test coverage report