@@ -118,14 +118,9 @@
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
       </plugin>
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.19.1</version>
-        <configuration>
-          <argLine>-Djdk.attach.allowAttachSelf=true</argLine>
-        </configuration>
       </plugin>
     </plugins>
   </build>
